2009-4-7 Yu-Sung Su     <ys463@columbia.edu>  
   * man/mi.pooled: new doc for mi.pooled
   * R/AllClass: mi.lm, mi.glm, mi.mer are obsoleted
   * R/mi.pooled: new function to pool estimates


2009-4-5 Yu-Sung Su     <ys463@columbia.edu>  
   * R/mi: fix dimensional probelm when model is of mulitnom; 
      now coef.convergence is working!
   * R/mi.preprocess: fix labels lost for unordered-categorical type

2009-4-3 Yu-Sung Su     <ys463@columbia.edu>  
   * R/mi: monitor the convergence of unordered-categorical type with 
      binary transformation
   * R/AllInternal: add .cat2binary .catvarnames, .fool, .foo2


2009-4-2 Yu-Sung Su     <ys463@columbia.edu>  
   * R/mi: allow add.priors to be logical, set FALSE to speicify no prior


2009-4-2 Yu-Sung Su     <ys463@columbia.edu>  
   * R/mi: allow add.priors to be logical, set FALSE to speicify no prior

2009-3-31 Yu-Sung Su     <ys463@columbia.edu>  
   * DESCRIPTION (Version, Date): 0.04-6
   * R/coef: add mi.mer method
   * R/se.coef: add mi.mer method
   * R/display: add mi.mer method
   * R/bayesglm.mi: add bayesglm.mi
   * R/lmer.mi: add lmer.mi, glmer.mi
   * R/mi: add rho into mi.copy procedure to deal with y = 2x


2009-3-20 Yu-Sung Su     <ys463@columbia.edu>  
   * R/mi.categorical: fix idx name of the random imputed values
   * R/mi.polr: fix idx name of the random imputed values


2009-3-20 Yu-Sung Su     <ys463@columbia.edu>  
   * DESCRIPTION (Version, Date): 0.04-5
   * R/mi: fix all(con.check) error

2009-3-11 Yu-Sung Su     <ys463@columbia.edu>  
   * DESCRIPTION (Version, Date): 0.04-4
   * pass Rhat option to mi()


2009-3-10 Yu-Sung Su     <ys463@columbia.edu>  
   * DESCRIPTION (Version, Date): 0.04-3
   * fix random jump, get coef and start from model fit

2009-3-5 Yu-Sung Su     <ys463@columbia.edu>  
   * DESCRIPTION (Version, Date): 0.04-2
   * add mi.count
   * add tpye "proportion"


2009-2-23 Yu-Sung Su     <ys463@columbia.edu>  
   * R/coef: add coef for mi.lm and mi.glm