@@ -1,3 +1,8 @@
+2009-4-12 Yu-Sung Su     <ys463@columbia.edu>  
+   * DESCRIPTION (Version, Date): 0.05-1   
+   * R/mi.preprocess: new mi.preprocess and mi.postprocess
+   * add "log-contiunous" variable type
+
 2009-4-7 Yu-Sung Su     <ys463@columbia.edu>  
    * man/mi.pooled: new doc for mi.pooled
    * R/AllClass: mi.lm, mi.glm, mi.mer are obsoleted
